# Poker

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
specs/: design.md  requirements.md  tasks.md
src/poker/: ARCHITECTURE.md  MODULE_LAYOUT.md  __init__.py
src/poker/ai/: __init__.py
src/poker/engine/: __init__.py  action.py  betting.py  card.py  hand_evaluator.py  player.py  pot_manager.py  showdown.py  table.py
src/poker/ui/: __init__.py  main_window.py
tests/: __init__.py  test_action.py  test_betting.py  test_hand_evaluator.py  test_player.py  test_pot_manager.py  test_showdown.py  test_table.py
